fix: correção scrollbar do popup principal

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@ body {
     background-color: var(--dark);
 }
 
-header {
+#main-header {
     color: var(--white);
     text-align: center;
     line-height: 8vh;
@@ -34,6 +34,7 @@ header {
     min-width: auto;
     min-height: auto;
     border-radius: 1.25rem;
+    text-align: center;
 }
 
 .quadro:hover {
@@ -58,7 +59,21 @@ header {
     font-size: 1.125rem;
     line-height: 1.7rem;
     text-align: justify;
+    /* overflow: auto; */
+}
+
+#header-popup {
+    display: flex;
+    justify-content: space-between;
+    height: 6vh;
+    width: 72.5vw;
+}
+
+#texto-popup {
+    width: 72vw;
+    height: 69vh;
     overflow: auto;
+    padding-right: 2vw;
 }
 
 #botao-fechar-popup {
@@ -71,9 +86,27 @@ header {
     text-decoration: underline;
 }
 
-#popup::-webkit-scrollbar {
-    width: 0.8rem;
-    height: 20px;
+#texto-popup::-webkit-scrollbar {
+    width: 0.6rem;
+    height: 3rem;
+}
+
+#texto-popup::-webkit-scrollbar-button {
+    height: 0;
+}
+
+#texto-popup::-webkit-scrollbar-corner {
+    border-radius: 8px;
+}
+
+#texto-popup::-webkit-scrollbar-thumb {
+    background-color: var(--red);
+    border-radius: 10px;
+}
+
+#texto-popup::-webkit-scrollbar-track {
+    background-color: var(--white);
+    border-radius: 10px;
 }
 
 .oculto {
